--- a/main.css
+++ b/main.css
@@ -218,3 +218,12 @@ body {
   animation-delay: -0.4s;
 }
 
+
+@media only screen and (max-width:425px) {
+  .text {
+    font-size: 14px;
+  }
+  i {
+    font-size: 150px;
+  }
+}
